<resources>
    <string name="app_name">Dress Rental</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="description">Description</string>
    <string name="product_name">Name</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="rental_price">Rental Price</string>
    <string name="brand">Brand</string>
    <string name="size">Size S/M/L...</string>
    <string name="frequency_of_use">Frequency Of Use</string>
    <string name="accessories">Accessories, If Any</string>
    <string name="city">City</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="phone_number">Phone Number</string>
    <!--    <string name="done">done</string>-->

    <string-array name="days_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

</resources>