<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_insetEdge="top">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddFragmentActivity">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:id="@+id/addHeader"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></RelativeLayout>


            <RelativeLayout
                android:layout_width="240dp"
                android:layout_height="830dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/shape_left_panel">

                <!--app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"-->
                <TextView
                    android:id="@+id/textAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="19dp"
                    android:text="Add Dress For Rent"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:background="@drawable/shape_add_panel"
                android:orientation="vertical">

<!--                com.google.android.material.imageview.ShapeableImageView-->
                <ImageView

                    android:id="@+id/image_view_dress"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:background="@color/grey"
                    android:src="@drawable/add_form_photo_128"
                    app:shapeAppearanceOverlay="@style/circuler" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/product_name"
                    app:startIconDrawable="@drawable/dress_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dressName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:inputType="textMultiLine" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/description"
                    app:startIconDrawable="@drawable/add_form_description_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:inputType="textMultiLine" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/rental_price"
                    app:startIconDrawable="@drawable/add_form_purchase_price_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:inputType="numberSigned" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/size"
                    app:startIconDrawable="@drawable/meter">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/phone_number"
                    app:startIconDrawable="@drawable/add_form_contact_phone_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/city"
                    app:startIconDrawable="@drawable/add_form_location_city_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/addButton"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:background="@color/colorPrimaryDark"

                    android:text="ADD"
                    android:textColor="#FFFFFF"

                    app:shapeAppearanceOverlay="@style/circuler"

                    >

                </Button>

            </LinearLayout>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="56dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:src="@drawable/add_form_photo_camera_24"
                android:tint="@color/white"
                app:layout_anchor="@id/image_view_dress"
                app:layout_anchorGravity="bottom|right|end"

                />


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>